--- a/journey-control/Views/Components/Cards/TaskCard.resx
+++ b/journey-control/Views/Components/Cards/TaskCard.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
+  <!--
     Microsoft ResX Schema 
-    
+
     Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
     associated with the data types.
-    
+
     Example:
-    
+
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-                
-    There are any number of "resheader" rows that contain simple 
+
+    There are any number of "resheader" rows that contain simple
     name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
     mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
     extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
     read any of the formats listed below.
-    
+
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
+    value   : The object must be serialized into a byte array
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -117,4 +117,33 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnTimerControl.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAABRRJREFUaEPtmttvVFUUxmu8oNEoXvDypo9Egv4TKiiI+AbqGwRegAZ9BXzTtPpC
+        0sS/A4NEjTQmioVpcZSmM9OZSW2hPKjxTSwRM/6+k287Qy/Tc2bvmarhS1b2nrX2up19PfvM0B38XzE9
+        Pf1YtVp9Y3Z2dhQ6C1VrtdpvlDdFrlcsG63X63vm5+cftfrGYm5u7n4Ceocgv4D+IsBWEULnFvQ59beh
+        TTY7OCwsLDxAAO/i/HpHUEvQeeon1DPUt+qJT05O3itSXTz32knq49IJ+tAisuN6OHbTX+D8NZw2OwIo
+        EcCBZrP5iJvkBkFvxt5BaDLYo97A3k43SQ89KRx90uFwivJli6PBEN2Bve877I8l7x0MPu3A5eB36Eir
+        1brb4q5AZ4L2F/yzK2ST9sdof8MJlejppyyOA938HIYbNlxpNBrbLMoF67X8MxfwuR2dmvTwXVcMFvUG
+        DG0JBqFLGHzCotywbqFEBC0O6H1j/aZGhUXFoPHJ0wjD6UK5XH7QokJwIIUTEeQT3QnbKPU0Z1AME7ui
+        zc7swrCNnhIRZmZmHkc/DLMxs/MBBS2x2cQuOieWIzYRQXOGWLIFQKub2d2hzQ6FbJ9A+YjZPSNFIgI2
+        hh1TPdcQo+F7VpjKu8R2Q6pExsfH78FO2faGzV4dNNgELbrxS2ZHwbaiExF4uK/a3vWuvUIDHd7UsGRW
+        NGwvSSKMkLs0Umxzv9krgfBLNWJyHTArGnaaJBGBRA7JHuU5s26HlliEOlYv9XIAXAupE/FGqXecP1eN
+        kwT22ulXZiWBbSZLRMDe17a726w2YH5k4QmzksA2kybCQ3/fdkfMagOmXkG14bxuVhLYYepEstFDecas
+        NmAiy4RbzYqC3gqxF3pZNCqexVHgYT9vm1Wz2oD5q4Q625gVBWx9bGedNGpxFHQKt71fzGoDplaCFqvX
+        fWZFQU7s7B+it3+2OArY0sYte0tmtYEgaSI4WZC9ZXTN4ihgp2siyYYWdrbg5CfZ6yR4H7hJFLoOLZzA
+        j5/sHPufxMYV25qHrlJfpPwwVW+vN9nD8rvHrMJAX6/GP8oOVKF3n7EoKXgob8oH5crlF0FYKk+aVQjL
+        emJavy1KDuyvvSEy7nQDqCDOm5Ub6A2kJwLwEY4ou8xqw1ea2aGRs/5ms9fFsp640s+eEHS4xVd2aIQe
+        Nvt2EIgulBXQQbPWBe1L1ul7EgK+Dssf9JlZK4HwLQc1ada6oO13aj+IJPxiddkx7jN7JWigjeaaGrJ6
+        vWL2vwbEtctJaEnv/hmCSX/cjS+nuHxIBV8+/ODYjpq9NnzDGO56j5m94QgPGNLOne+jEEo7pURCN6hv
+        N3vDQBwvQn84kWKfMlAcs2It1dG+F+Bf57a6Yzltdn5oiKGYLa3QRK+X2DFgz3gI3xcdg8revjOiqB27
+        akOX9NuivkMbHz3xrXxTNqI/+DBH9KEndC3V2gsW9Q340JzIfFLOViqVZy2Kg54GRsMOrlvxYS2HFieD
+        bGp1wkeY2BeTb7RelsMCICprdbM4Ct6x9Skj2ydMp6H+fXtnx9+B0zDU1ENT0CEdOt0kN3wAPIx+duyw
+        PYp0X4u7wiuavldkxxmTTqQ6Xp8imL16i9OyrbdCkeoMk23I9FJ0ym2zewIR/KvQUeqD/weEnEL7CeAc
+        dCsEVYB0FD+L7j7KwSewGnShTDC7oREC+5RSf6DRhYaeukj1GWRnKEcgtV39feIO/vMYGvobUUPJEWjy
+        4Q0AAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
