--- a/journey-control/Properties/Resources/Resources.resx
+++ b/journey-control/Properties/Resources/Resources.resx
@@ -139,8 +139,14 @@
   <data name="icon_pause" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\Images\icon-pause.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon_pause_s" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Images\icon-pause-s.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon_play" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\Images\icon-play.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_play_s" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Images\icon-play-s.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icon_prev" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\Images\icon-prev.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
