--- a/journey-control/Properties/Resources/Resources.resx
+++ b/journey-control/Properties/Resources/Resources.resx
@@ -133,6 +133,9 @@
   <data name="icon_loading" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\Images\icon-loading.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\Images\icon-logo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon_next" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\Images\icon-next.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
